alignment fixed

--- a/calculator.css
+++ b/calculator.css
@@ -10,10 +10,14 @@ body{
 
 #outer
 {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
     display:flex;
-    position: relative;
+    /* position: relative;
     top:15%;
-    left:30%;
+    left:30%; */
     flex-direction: column;
     align-items: center;
     height:auto;
